objects/MyHomeRocksTimes__c.object
<CustomObject>
    <description>My Home Rocks desc</description>
    <fields>
        <fullName>Aadhar_Number__c</fullName>
        <label>Aadhar Number</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Address__c</fullName>
        <label>Current Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Discount_Available__c</fullName>
        <label>Discount Available</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discount_Type__c</fullName>
        <label>Discount Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discounted_Amount__c</fullName>
        <formula>IF( AND(
 
 ISPICKVAL(Discount_Type__c, &apos;Web&apos;) ,
 
ISPICKVAL(Discount_Available__c, &apos;Yes&apos;)
 
) , 30000, 
 
IF( AND(
 
 ISPICKVAL(Discount_Type__c, &apos;Event&apos;) ,
 
ISPICKVAL(Discount_Available__c, &apos;Yes&apos;)
 
) , 50000, 
 
 
IF( AND(
 
 ISPICKVAL(Discount_Type__c, &apos;Manager&apos;) ,
 
ISPICKVAL(Discount_Available__c, &apos;Yes&apos;)
 
) , 150000, 0)
 
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discounted Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>F_H_Name__c</fullName>
        <label>F/H Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Floor__c</fullName>
        <label>Floor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>House_Facing__c</fullName>
        <label>House Facing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>House_Type__c</fullName>
        <label>House Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2BHK</fullName>
                </value>
                <value>
                    <fullName>3BHK</fullName>
                </value>
                <value>
                    <fullName>4BHK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interested_In__c</fullName>
        <label>Interested-In</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Flats</fullName>
                </value>
                <value>
                    <fullName>Duplex</fullName>
                </value>
                <value>
                    <fullName>Independant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <label>Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Pamphlet</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
                <value>
                    <fullName>Walk-In</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Status__c</fullName>
        <label>Lead Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Closed-Won</fullName>
                </value>
                <value>
                    <fullName>Closed-Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MyHomeNewField__c</fullName>
        <label>MyHomeNewField</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAN_Number__c</fullName>
        <label>PAN Number</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Proffesion__c</fullName>
        <label>Proffesion</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Self Employed</fullName>
                </value>
                <value>
                    <fullName>Salaried</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <formula>VALUE( TEXT( Unit_Price__c ) ) -  VALUE( TEXT(  Discounted_Amount__c  ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2800000</fullName>
                </value>
                <value>
                    <fullName>3000000</fullName>
                </value>
                <value>
                    <fullName>3500000</fullName>
                </value>
                <value>
                    <fullName>4500000</fullName>
                </value>
                <value>
                    <fullName>6000000</fullName>
                </value>
                <value>
                    <fullName>7500000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>MyHomeRocksTime</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Customer Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MyHomeRocksTimes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>